# chat-agent-react-flask

./: .gitignore  CLAUDE.md  Makefile  README.md  architecture.md  biome.json
.github/: copilot-instructions.md
backend/: app.py  pyproject.toml
backend/app/controller/: chat_controller.py
backend/app/core/: message_builder.py
backend/app/models/: openai_client.py
backend/app/service/: chat_service.py
backend/app/types/: chat_types.py
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chatApi.ts
frontend/src/components/Answer/: Answer.module.css  Answer.tsx
frontend/src/components/ChatArea/: ChatArea.module.css  ChatArea.tsx
frontend/src/components/ChatHistory/: ChatHistory.tsx
frontend/src/components/ClearChatButton/: ClearChatButton.tsx
frontend/src/components/HeaderSection/: HeaderSection.tsx
frontend/src/components/InputSection/: InputSection.tsx
frontend/src/components/QuestionInput/: QuestionInput.module.css  QuestionInput.tsx
frontend/src/components/SettingsButton/: SettingsButton.tsx
frontend/src/hooks/: useAiChat.ts  useAiSdkChat.ts  useChat.ts  useChatProvider.ts  useChatStream.ts  useSettings.ts  useSidebar.ts
frontend/src/pages/chat/: ChatPage.module.css  ChatPage.tsx
frontend/src/styles/: global.css  theme.ts
frontend/src/types/: chat.ts  css.d.ts
