[project]
name = "chat-agent-backend"
version = "0.1.0"
description = "Flask backend for AI chat application"
authors = [{name = "Developer", email = "dev@example.com"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=4.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]